--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #b8bbbe;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -26,6 +26,11 @@
 
 .App-link {
   color: #61dafb;
+}
+
+
+.bcl{
+  background-color: #4558c4 !important;
 }
 
 @keyframes App-logo-spin {
